fix: 테스트 코드 에러 수정